Fix app height on mobile devices 1

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,5 @@
 html, body {
     margin: 0;
     padding: 0;
-    height: 100vh;
-    min-height: 100vh;
+    height: calc(100vh - env(safe-area-inset-bottom));
 }
